2004-10-05  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

Tue Oct  5 19:29:06 2004  Tim Janik  <timj@gtk.org>

	* gtk/gtkentry.h: removed redundant gtk_entry_get_layout() decl.

2004-10-05  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkicontheme.c (icon_info_ensure_scale_and_pixbuf): Go back to
	not scaling up at all. Less magic.

Tue Oct  5 17:06:26 2004  Tim Janik  <timj@gtk.org>

	* gtk/gtkwidget.c (gtk_widget_size_allocate): if REQUEST_NEEDED is still
	set on ::size-allocate, another size-request has been queued since
	::size-request and needs to be requeued.

2004-10-05  Paolo Borelli  <pborelli@katamail.com>

	* gtk/gtkmenutoolbutton.c: rename the activate-menu signal to
	show-menu as discussed in bug #153873.

2004-10-05  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkuimanager.c (gtk_ui_manager_add_ui): Set 
	action_name.  (#154526, John Finlay)

	* gdk/x11/gdkwindow-x11.c (gdk_window_foreign_new_for_display): 
	Return a new reference to an existing GdkWindow if one already
	exists.  (#151378, Gustavo Carneiro)

2004-10-05  Matthias Clasen  <mclasen@redhat.com>

	Provide access to the string representation of accelerators used
	in GtkAccelLabel.  (#154068, John Spray)

	* gtk/gtkaccelgroup.h:
	* gtk/gtkaccelgroup.c (gtk_accelerator_get_label): New function
	to return the accelerator label used in GtkAccelLabel. 
	(gtk_accelerator_name): Update docs to point to 
	gtk_accelerator_get_label().
	* gtk/gtkaccellabel.h:
	* gtk/gtkaccellabel.c (_gtk_accel_label_class_get_accelerator_label): 
	New auxiliary function which creates the string representing the
	accelerator.
	
2004-10-05  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcombobox.c (gtk_combo_box_set_model): Resize the
	popup if a new model is set.  (#154129, Bernd Demian)

2004-10-04  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkicontheme.c (icon_info_ensure_scale_and_pixbuf): 
	Make the code work as intended for unthemed icons; don't scale