@@ -2675,7 +2675,8 @@ gtk_widget_size_allocate (GtkWidget	*widget,
   g_return_if_fail (GTK_IS_WIDGET (widget));
 
   alloc_needed = GTK_WIDGET_ALLOC_NEEDED (widget);
-  GTK_PRIVATE_UNSET_FLAG (widget, GTK_ALLOC_NEEDED);
+  if (!GTK_WIDGET_REQUEST_NEEDED (widget))      /* Preserve request/allocate ordering */
+    GTK_PRIVATE_UNSET_FLAG (widget, GTK_ALLOC_NEEDED);
 
   old_allocation = widget->allocation;
   real_allocation = *allocation;
@@ -2705,13 +2706,7 @@ gtk_widget_size_allocate (GtkWidget	*widget,
 		      old_allocation.y != real_allocation.y);
 
   if (!alloc_needed && !size_changed && !position_changed)
-    {
-      if (GTK_WIDGET_REQUEST_NEEDED (widget))
-        { /* another resize has been queued */
-          gtk_widget_queue_resize (widget);
-        }
-      return;
-    }
+    return;
   
   g_signal_emit (widget, widget_signals[SIZE_ALLOCATE], 0, &real_allocation);
 
@@ -2749,11 +2744,6 @@ gtk_widget_size_allocate (GtkWidget	*widget,
       GdkRegion *invalidate = gdk_region_rectangle (&widget->parent->allocation);
       gtk_widget_invalidate_widget_windows (widget->parent, invalidate);
       gdk_region_destroy (invalidate);
-    }
-  
-  if (GTK_WIDGET_REQUEST_NEEDED (widget))
-    { /* another resize has been queued */
-      gtk_widget_queue_resize (widget);
     }
 }
 
